# LunarPitsResearchToolbox

./: .env  .env_example  Dockerfile.worker  Makefile  README.md  TODO  assign_tasks.py  docker-compose.yaml  pyproject.toml  worker_entrypoint.sh
netdata/: netdata.conf
netdata/python.d/: mangodb.conf  redis.conf
notebooks/: LOLA.ipynb  MiniRF.ipynb
src/: config.py  global_config.py
src/SPICE/: config.py  filters.py  utils.py
src/SPICE/instruments/: grail.py  instrument.py  lro.py  subinstruments.py
src/SPICE/kernel_utils/: base_kernel_manager.py  detailed_model.py  kernel_management.py  locks.py  spice_kernels.py  spice_utils.py
src/celery/: app.py  config.py
src/data_connectors/: base_data_connector.py
src/data_fetchers/: config.py  data_extractor.py  interval_manager.py  lunar_pit_atlas_fetcher.py
src/db/: config.py  interface.py
src/experiments/: extractions.py  simulations.py
src/filters/: __init__.py  area_filter.py  base_filter.py  composite_filter.py  lunar_pit_filter.py  point_filter.py
src/manual_scripts/: aggregate_simulation_intervals.py  assign_tasks.py  scrape_pit_atlas.py
src/pipeline/: app.py  config.py
src/scripts/: _parse_lunar_pits_database.py  _scrape_lunar_pits_database.py  scrape_pit_atlas.py
src/simulation/: __init__.py  config.py  filters.py  simulator.py
src/simulators/: base_instrument.py  config.py  filters.py  simulator.py
src/structures/: __init__.py  dynamic_max_buffer.py  interval_manager.py  lock.py  projection_point.py  virtual_file.py
worker/: run_celery.sh  update_code.sh  worker_entrypoint.sh
(+37 files in other folders)
